Remove use of BASE64 class that was deprecated in Java 8 and removed in Java 9. Addresses issue #41.