@@ -68,8 +68,8 @@ public class BenchmarkTest00067 extends HttpServlet {
 		map71153.put("key71153", b71153.toString()); // put in a collection
 		String c71153 = (String)map71153.get("key71153"); // get it back out
 		String d71153 = c71153.substring(0,c71153.length()-1); // extract most of it
-		String e71153 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d71153.getBytes() ) )); // B64 encode and decode it
+		String e71153 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d71153.getBytes() ) )); // B64 encode and decode it
 		String f71153 = e71153.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g71153 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
