@@ -67,8 +67,8 @@ public class BenchmarkTest00239 extends HttpServlet {
 		map22450.put("key22450", b22450.toString()); // put in a collection
 		String c22450 = (String)map22450.get("key22450"); // get it back out
 		String d22450 = c22450.substring(0,c22450.length()-1); // extract most of it
-		String e22450 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d22450.getBytes() ) )); // B64 encode and decode it
+		String e22450 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d22450.getBytes() ) )); // B64 encode and decode it
 		String f22450 = e22450.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f22450); // reflection
