@@ -67,8 +67,8 @@ public class BenchmarkTest00245 extends HttpServlet {
 		map73565.put("key73565", b73565.toString()); // put in a collection
 		String c73565 = (String)map73565.get("key73565"); // get it back out
 		String d73565 = c73565.substring(0,c73565.length()-1); // extract most of it
-		String e73565 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d73565.getBytes() ) )); // B64 encode and decode it
+		String e73565 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d73565.getBytes() ) )); // B64 encode and decode it
 		String f73565 = e73565.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g73565 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
