@@ -60,8 +60,8 @@ public class BenchmarkTest00271 extends HttpServlet {
 		map75009.put("key75009", b75009.toString()); // put in a collection
 		String c75009 = (String)map75009.get("key75009"); // get it back out
 		String d75009 = c75009.substring(0,c75009.length()-1); // extract most of it
-		String e75009 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d75009.getBytes() ) )); // B64 encode and decode it
+		String e75009 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d75009.getBytes() ) )); // B64 encode and decode it
 		String f75009 = e75009.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f75009); // reflection
