@@ -60,8 +60,8 @@ public class BenchmarkTest00305 extends HttpServlet {
 		map99928.put("key99928", b99928.toString()); // put in a collection
 		String c99928 = (String)map99928.get("key99928"); // get it back out
 		String d99928 = c99928.substring(0,c99928.length()-1); // extract most of it
-		String e99928 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d99928.getBytes() ) )); // B64 encode and decode it
+		String e99928 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d99928.getBytes() ) )); // B64 encode and decode it
 		String f99928 = e99928.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g99928 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
