@@ -60,8 +60,8 @@ public class BenchmarkTest00318 extends HttpServlet {
 		map30925.put("key30925", b30925.toString()); // put in a collection
 		String c30925 = (String)map30925.get("key30925"); // get it back out
 		String d30925 = c30925.substring(0,c30925.length()-1); // extract most of it
-		String e30925 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d30925.getBytes() ) )); // B64 encode and decode it
+		String e30925 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d30925.getBytes() ) )); // B64 encode and decode it
 		String f30925 = e30925.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g30925 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
