@@ -67,8 +67,8 @@ public class BenchmarkTest00523 extends HttpServlet {
 		map87760.put("key87760", b87760.toString()); // put in a collection
 		String c87760 = (String)map87760.get("key87760"); // get it back out
 		String d87760 = c87760.substring(0,c87760.length()-1); // extract most of it
-		String e87760 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d87760.getBytes() ) )); // B64 encode and decode it
+		String e87760 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d87760.getBytes() ) )); // B64 encode and decode it
 		String f87760 = e87760.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g87760 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
