@@ -67,8 +67,8 @@ public class BenchmarkTest00569 extends HttpServlet {
 		map6821.put("key6821", b6821.toString()); // put in a collection
 		String c6821 = (String)map6821.get("key6821"); // get it back out
 		String d6821 = c6821.substring(0,c6821.length()-1); // extract most of it
-		String e6821 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d6821.getBytes() ) )); // B64 encode and decode it
+		String e6821 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d6821.getBytes() ) )); // B64 encode and decode it
 		String f6821 = e6821.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g6821 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
