@@ -67,8 +67,8 @@ public class BenchmarkTest00592 extends HttpServlet {
 		map36502.put("key36502", b36502.toString()); // put in a collection
 		String c36502 = (String)map36502.get("key36502"); // get it back out
 		String d36502 = c36502.substring(0,c36502.length()-1); // extract most of it
-		String e36502 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d36502.getBytes() ) )); // B64 encode and decode it
+		String e36502 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d36502.getBytes() ) )); // B64 encode and decode it
 		String f36502 = e36502.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g36502 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
