@@ -67,8 +67,8 @@ public class BenchmarkTest00599 extends HttpServlet {
 		map99467.put("key99467", b99467.toString()); // put in a collection
 		String c99467 = (String)map99467.get("key99467"); // get it back out
 		String d99467 = c99467.substring(0,c99467.length()-1); // extract most of it
-		String e99467 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d99467.getBytes() ) )); // B64 encode and decode it
+		String e99467 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d99467.getBytes() ) )); // B64 encode and decode it
 		String f99467 = e99467.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g99467 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
