@@ -54,8 +54,8 @@ public class BenchmarkTest00674 extends HttpServlet {
 		map55926.put("key55926", b55926.toString()); // put in a collection
 		String c55926 = (String)map55926.get("key55926"); // get it back out
 		String d55926 = c55926.substring(0,c55926.length()-1); // extract most of it
-		String e55926 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d55926.getBytes() ) )); // B64 encode and decode it
+		String e55926 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d55926.getBytes() ) )); // B64 encode and decode it
 		String f55926 = e55926.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g55926 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
