@@ -53,8 +53,8 @@ public class BenchmarkTest00856 extends HttpServlet {
 		map98944.put("key98944", b98944.toString()); // put in a collection
 		String c98944 = (String)map98944.get("key98944"); // get it back out
 		String d98944 = c98944.substring(0,c98944.length()-1); // extract most of it
-		String e98944 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d98944.getBytes() ) )); // B64 encode and decode it
+		String e98944 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d98944.getBytes() ) )); // B64 encode and decode it
 		String f98944 = e98944.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f98944); // reflection
