@@ -68,8 +68,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map92400.put("key92400", b92400.toString()); // put in a collection
 		String c92400 = (String)map92400.get("key92400"); // get it back out
 		String d92400 = c92400.substring(0,c92400.length()-1); // extract most of it
-		String e92400 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d92400.getBytes() ) )); // B64 encode and decode it
+		String e92400 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d92400.getBytes() ) )); // B64 encode and decode it
 		String f92400 = e92400.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f92400); // reflection
