@@ -124,8 +124,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map25760.put("key25760", b25760.toString()); // put in a collection
 		String c25760 = (String)map25760.get("key25760"); // get it back out
 		String d25760 = c25760.substring(0,c25760.length()-1); // extract most of it
-		String e25760 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d25760.getBytes() ) )); // B64 encode and decode it
+		String e25760 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d25760.getBytes() ) )); // B64 encode and decode it
 		String f25760 = e25760.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g25760 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
