@@ -107,8 +107,8 @@ public class BenchmarkTest01165 extends HttpServlet {
 		map91034.put("key91034", b91034.toString()); // put in a collection
 		String c91034 = (String)map91034.get("key91034"); // get it back out
 		String d91034 = c91034.substring(0,c91034.length()-1); // extract most of it
-		String e91034 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d91034.getBytes() ) )); // B64 encode and decode it
+		String e91034 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d91034.getBytes() ) )); // B64 encode and decode it
 		String f91034 = e91034.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g91034 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
