@@ -57,8 +57,8 @@ response.setHeader("X-XSS-Protection", "0");
 
 		String bar = "";
 		if (param != null) {
-			bar = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    	new sun.misc.BASE64Encoder().encode( param.getBytes() ) ));
+			bar = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    	org.apache.commons.codec.binary.Base64.encodeBase64( param.getBytes() ) ));
 		}
 
             return bar;
