@@ -150,8 +150,8 @@ e.printStackTrace(response.getWriter());
 		map66881.put("key66881", b66881.toString()); // put in a collection
 		String c66881 = (String)map66881.get("key66881"); // get it back out
 		String d66881 = c66881.substring(0,c66881.length()-1); // extract most of it
-		String e66881 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d66881.getBytes() ) )); // B64 encode and decode it
+		String e66881 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d66881.getBytes() ) )); // B64 encode and decode it
 		String f66881 = e66881.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g66881 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
