@@ -73,8 +73,8 @@ public class BenchmarkTest01375 extends HttpServlet {
 		map33070.put("key33070", b33070.toString()); // put in a collection
 		String c33070 = (String)map33070.get("key33070"); // get it back out
 		String d33070 = c33070.substring(0,c33070.length()-1); // extract most of it
-		String e33070 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d33070.getBytes() ) )); // B64 encode and decode it
+		String e33070 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d33070.getBytes() ) )); // B64 encode and decode it
 		String f33070 = e33070.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f33070); // reflection
