@@ -83,8 +83,8 @@ public class BenchmarkTest01378 extends HttpServlet {
 		map50098.put("key50098", b50098.toString()); // put in a collection
 		String c50098 = (String)map50098.get("key50098"); // get it back out
 		String d50098 = c50098.substring(0,c50098.length()-1); // extract most of it
-		String e50098 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d50098.getBytes() ) )); // B64 encode and decode it
+		String e50098 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d50098.getBytes() ) )); // B64 encode and decode it
 		String f50098 = e50098.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g50098 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
