@@ -165,8 +165,8 @@ e.printStackTrace(response.getWriter());
 		map37227.put("key37227", b37227.toString()); // put in a collection
 		String c37227 = (String)map37227.get("key37227"); // get it back out
 		String d37227 = c37227.substring(0,c37227.length()-1); // extract most of it
-		String e37227 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d37227.getBytes() ) )); // B64 encode and decode it
+		String e37227 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d37227.getBytes() ) )); // B64 encode and decode it
 		String f37227 = e37227.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g37227 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
