@@ -77,8 +77,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map32762.put("key32762", b32762.toString()); // put in a collection
 		String c32762 = (String)map32762.get("key32762"); // get it back out
 		String d32762 = c32762.substring(0,c32762.length()-1); // extract most of it
-		String e32762 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d32762.getBytes() ) )); // B64 encode and decode it
+		String e32762 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d32762.getBytes() ) )); // B64 encode and decode it
 		String f32762 = e32762.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f32762); // reflection
