@@ -91,8 +91,8 @@ public class BenchmarkTest01472 extends HttpServlet {
 		map60049.put("key60049", b60049.toString()); // put in a collection
 		String c60049 = (String)map60049.get("key60049"); // get it back out
 		String d60049 = c60049.substring(0,c60049.length()-1); // extract most of it
-		String e60049 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d60049.getBytes() ) )); // B64 encode and decode it
+		String e60049 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d60049.getBytes() ) )); // B64 encode and decode it
 		String f60049 = e60049.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g60049 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
