@@ -107,8 +107,8 @@ public class BenchmarkTest01502 extends HttpServlet {
 		map43640.put("key43640", b43640.toString()); // put in a collection
 		String c43640 = (String)map43640.get("key43640"); // get it back out
 		String d43640 = c43640.substring(0,c43640.length()-1); // extract most of it
-		String e43640 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d43640.getBytes() ) )); // B64 encode and decode it
+		String e43640 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d43640.getBytes() ) )); // B64 encode and decode it
 		String f43640 = e43640.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g43640 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
