@@ -66,8 +66,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map75770.put("key75770", b75770.toString()); // put in a collection
 		String c75770 = (String)map75770.get("key75770"); // get it back out
 		String d75770 = c75770.substring(0,c75770.length()-1); // extract most of it
-		String e75770 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d75770.getBytes() ) )); // B64 encode and decode it
+		String e75770 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d75770.getBytes() ) )); // B64 encode and decode it
 		String f75770 = e75770.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f75770); // reflection
