@@ -159,8 +159,8 @@ e.printStackTrace(response.getWriter());
 		map37769.put("key37769", b37769.toString()); // put in a collection
 		String c37769 = (String)map37769.get("key37769"); // get it back out
 		String d37769 = c37769.substring(0,c37769.length()-1); // extract most of it
-		String e37769 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d37769.getBytes() ) )); // B64 encode and decode it
+		String e37769 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d37769.getBytes() ) )); // B64 encode and decode it
 		String f37769 = e37769.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g37769 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
