@@ -120,8 +120,8 @@ public class BenchmarkTest01678 extends HttpServlet {
 		map96171.put("key96171", b96171.toString()); // put in a collection
 		String c96171 = (String)map96171.get("key96171"); // get it back out
 		String d96171 = c96171.substring(0,c96171.length()-1); // extract most of it
-		String e96171 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d96171.getBytes() ) )); // B64 encode and decode it
+		String e96171 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d96171.getBytes() ) )); // B64 encode and decode it
 		String f96171 = e96171.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f96171); // reflection
