@@ -82,8 +82,8 @@ public class BenchmarkTest01709 extends HttpServlet {
 		map15574.put("key15574", b15574.toString()); // put in a collection
 		String c15574 = (String)map15574.get("key15574"); // get it back out
 		String d15574 = c15574.substring(0,c15574.length()-1); // extract most of it
-		String e15574 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d15574.getBytes() ) )); // B64 encode and decode it
+		String e15574 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d15574.getBytes() ) )); // B64 encode and decode it
 		String f15574 = e15574.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f15574); // reflection
