@@ -72,8 +72,8 @@ public class BenchmarkTest01744 extends HttpServlet {
 		map17402.put("key17402", b17402.toString()); // put in a collection
 		String c17402 = (String)map17402.get("key17402"); // get it back out
 		String d17402 = c17402.substring(0,c17402.length()-1); // extract most of it
-		String e17402 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d17402.getBytes() ) )); // B64 encode and decode it
+		String e17402 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d17402.getBytes() ) )); // B64 encode and decode it
 		String f17402 = e17402.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g17402 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
