@@ -118,8 +118,8 @@ public class BenchmarkTest01992 extends HttpServlet {
 		map82010.put("key82010", b82010.toString()); // put in a collection
 		String c82010 = (String)map82010.get("key82010"); // get it back out
 		String d82010 = c82010.substring(0,c82010.length()-1); // extract most of it
-		String e82010 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d82010.getBytes() ) )); // B64 encode and decode it
+		String e82010 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d82010.getBytes() ) )); // B64 encode and decode it
 		String f82010 = e82010.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f82010); // reflection
