@@ -91,8 +91,8 @@ public class BenchmarkTest02030 extends HttpServlet {
 		map60868.put("key60868", b60868.toString()); // put in a collection
 		String c60868 = (String)map60868.get("key60868"); // get it back out
 		String d60868 = c60868.substring(0,c60868.length()-1); // extract most of it
-		String e60868 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d60868.getBytes() ) )); // B64 encode and decode it
+		String e60868 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d60868.getBytes() ) )); // B64 encode and decode it
 		String f60868 = e60868.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g60868 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
