@@ -111,8 +111,8 @@ public class BenchmarkTest02062 extends HttpServlet {
 		map60435.put("key60435", b60435.toString()); // put in a collection
 		String c60435 = (String)map60435.get("key60435"); // get it back out
 		String d60435 = c60435.substring(0,c60435.length()-1); // extract most of it
-		String e60435 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d60435.getBytes() ) )); // B64 encode and decode it
+		String e60435 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d60435.getBytes() ) )); // B64 encode and decode it
 		String f60435 = e60435.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g60435 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
