@@ -115,8 +115,8 @@ user + " has been remembered with cookie: " + rememberMe.getName()
 		map44156.put("key44156", b44156.toString()); // put in a collection
 		String c44156 = (String)map44156.get("key44156"); // get it back out
 		String d44156 = c44156.substring(0,c44156.length()-1); // extract most of it
-		String e44156 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d44156.getBytes() ) )); // B64 encode and decode it
+		String e44156 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d44156.getBytes() ) )); // B64 encode and decode it
 		String f44156 = e44156.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f44156); // reflection
