@@ -83,8 +83,8 @@ public class BenchmarkTest02183 extends HttpServlet {
 		map90580.put("key90580", b90580.toString()); // put in a collection
 		String c90580 = (String)map90580.get("key90580"); // get it back out
 		String d90580 = c90580.substring(0,c90580.length()-1); // extract most of it
-		String e90580 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d90580.getBytes() ) )); // B64 encode and decode it
+		String e90580 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d90580.getBytes() ) )); // B64 encode and decode it
 		String f90580 = e90580.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g90580 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
