@@ -103,8 +103,8 @@ public class BenchmarkTest02220 extends HttpServlet {
 		map19972.put("key19972", b19972.toString()); // put in a collection
 		String c19972 = (String)map19972.get("key19972"); // get it back out
 		String d19972 = c19972.substring(0,c19972.length()-1); // extract most of it
-		String e19972 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d19972.getBytes() ) )); // B64 encode and decode it
+		String e19972 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d19972.getBytes() ) )); // B64 encode and decode it
 		String f19972 = e19972.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f19972); // reflection
