@@ -105,8 +105,8 @@ public class BenchmarkTest02419 extends HttpServlet {
 		map8935.put("key8935", b8935.toString()); // put in a collection
 		String c8935 = (String)map8935.get("key8935"); // get it back out
 		String d8935 = c8935.substring(0,c8935.length()-1); // extract most of it
-		String e8935 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d8935.getBytes() ) )); // B64 encode and decode it
+		String e8935 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d8935.getBytes() ) )); // B64 encode and decode it
 		String f8935 = e8935.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g8935 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
