@@ -106,8 +106,8 @@ public class BenchmarkTest02423 extends HttpServlet {
 		map24134.put("key24134", b24134.toString()); // put in a collection
 		String c24134 = (String)map24134.get("key24134"); // get it back out
 		String d24134 = c24134.substring(0,c24134.length()-1); // extract most of it
-		String e24134 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d24134.getBytes() ) )); // B64 encode and decode it
+		String e24134 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d24134.getBytes() ) )); // B64 encode and decode it
 		String f24134 = e24134.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f24134); // reflection
