@@ -64,8 +64,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map17852.put("key17852", b17852.toString()); // put in a collection
 		String c17852 = (String)map17852.get("key17852"); // get it back out
 		String d17852 = c17852.substring(0,c17852.length()-1); // extract most of it
-		String e17852 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d17852.getBytes() ) )); // B64 encode and decode it
+		String e17852 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d17852.getBytes() ) )); // B64 encode and decode it
 		String f17852 = e17852.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String g17852 = "barbarians_at_the_gate";  // This is static so this whole flow is 'safe'
