@@ -76,8 +76,8 @@ response.setHeader("X-XSS-Protection", "0");
 		map93081.put("key93081", b93081.toString()); // put in a collection
 		String c93081 = (String)map93081.get("key93081"); // get it back out
 		String d93081 = c93081.substring(0,c93081.length()-1); // extract most of it
-		String e93081 = new String( new sun.misc.BASE64Decoder().decodeBuffer( 
-		    new sun.misc.BASE64Encoder().encode( d93081.getBytes() ) )); // B64 encode and decode it
+		String e93081 = new String( org.apache.commons.codec.binary.Base64.decodeBase64(
+		    org.apache.commons.codec.binary.Base64.encodeBase64( d93081.getBytes() ) )); // B64 encode and decode it
 		String f93081 = e93081.split(" ")[0]; // split it on a space
 		org.owasp.benchmark.helpers.ThingInterface thing = org.owasp.benchmark.helpers.ThingFactory.createThing();
 		String bar = thing.doSomething(f93081); // reflection
